| Summary: | ASTERISK-25826: PJSIP / Sorcery slow load from realtime | ||
| Reporter: | Ross Beer (rossbeer) | Labels: | |
| Date Opened: | 2016-03-02 03:50:13.000-0600 | Date Closed: | 2016-03-29 13:17:32 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_pjsip Core/Sorcery |
| Versions: | SVN 13.7.2 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | CentOS 7 | Attachments: | |
| Description: | Asterisk 13 using PJSIP and Sourcery realtime takes over 25 minutes to load.
On PJSIP start when using a realtime back-end, a full endpoint query is run that pulls all Endpoints from the database. During this time the CLI outputs 'Endpoint XXX is now Unknown' and populates the cache. While this wouldn't be a problem with only a few realtime peers, it does create an issue when there are around 20,000 endpoints defined, causing a very slow start-up. Sourcery Cache helps with the realtime queries once started, however there is no need to cache all endpoints at start up as they will be retrieved at the point of access. Much like the old chan_sip realtime. Ideally Asterisk 13 / Sorcery should have an option to 'pre-load' all end points which would allow the initial load to be skipped if required. I understand that in some situations some platforms will require to load all endpoints for 'qualify' functions however there is no need for this in the current set-up, any peers that do require qualification are stored in the .conf files. A discussion and diagnosis have been ongoing via the mailing list and a ticket asked to be raised for this issue. http://lists.digium.com/pipermail/asterisk-dev/2016-March/075355.html | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-03-02 03:50:14.805-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. | ||